--- a/src/App.css
+++ b/src/App.css
@@ -157,12 +157,11 @@ display: flex;
 
 .info-middle{
   display: flex;
-  width: 1050px;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .info-me{
-  margin: 5px;
-  /* width: 650px; */
 }
 .info-me h2{
   font-size: 1.5rem!important;
@@ -177,18 +176,34 @@ display: flex;
 }
 
 .detail-info{
-  margin: 5px;
-  /* width: 300px; */
   line-height: 1.7rem;
 
 }
 
 .detail-info p{
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   border-bottom: 1px solid hsla(0,0%,100%,.5);
   font-family: 'Times New Roman', Times, serif;
 }
 
+
+.detail-info button{
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 300ms ease-in;
+  background-color: #1fc292;
+
+}
+
+.detail-info button:hover{
+  color: #fff;
+  background-color: #212529;
+}
+
+.what{
+  background-color: #343a40;
+}
 @media (max-width: 768px) {
   /* CSS pour les écrans de 768 pixels de largeur ou moins */
   .app{
